--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,12 @@
-<p>signup works!</p>
+<section>
+    <form>
+        <mat-form-field>
+            <mat-label>Your email</mat-label>
+            <input type="email" matInput placeholder="Add your email">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Your password</mat-label>
+            <input type="password" matInput placeholder="Add your password">
+        </mat-form-field>
+    </form>
+</section>
